01.03.2022 -> Динамическое создание кнопок, новые возможности протокола