@@ -13,6 +13,7 @@ import java.io.FileReader;
 import java.io.IOException;
 import java.io.StringReader;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.HashMap;
 import java.util.List;
 
@@ -26,9 +27,13 @@ public class ProtocolRepo extends HashMap<String, Byte> {
     private Context context;
     ProtocolDBHelper dbHelper;
 
-    public static final List<String> labels = List.of("class_android", "class_computer", "class_arduino", "type_sphere", "type_anthropomorphic",
+    public static final List<String> mainLabels = new ArrayList<>(Arrays.asList("class_android", "class_computer", "class_arduino", "type_sphere", "type_anthropomorphic",
             "type_cubbi", "type_computer", "no_class", "no_type", "redo_command", "new_command", "type_move", "type_tele",
-            "STOP", "FORWARD", "FORWARD_STOP", "BACK", "BACK_STOP", "LEFT", "LEFT_STOP", "RIGHT", "RIGHT_STOP", "SERVOMOTORS", "SPEED");
+            "STOP", "FORWARD", "FORWARD_STOP", "BACK", "BACK_STOP", "LEFT", "LEFT_STOP", "RIGHT", "RIGHT_STOP"));
+
+    public static final HashMap<String, Byte> possibilitiesSettings = new HashMap<>();
+
+    private final HashMap<String, Byte> newProtoCommands = new HashMap<>();
 
     public ProtocolRepo(Context context, String name) {
         this.context = context;
@@ -36,16 +41,49 @@ public class ProtocolRepo extends HashMap<String, Byte> {
         Log.d("mLog", "name = " + name);
         queryTags = new ArrayList<>();
         moveCodes = new HashMap<>();
-        if (!name.isEmpty())
+        if (!name.isEmpty()){
+            possibilitiesSettings.put("camera", (byte) 0x0);
+            possibilitiesSettings.put("move", (byte) 0x0);
             parseCodes(name);
+        }
+
+        //ArrayList<String> mainMovingCommands = new ArrayList<>(Arrays.asList("STOP", "FORWARD", "FORWARD_STOP", "BACK", "BACK_STOP", "LEFT", "LEFT_STOP", "RIGHT", "RIGHT_STOP"));
     }
 
     public boolean getTag(String tag) {
         return queryTags.contains(tag);
     }
 
+    public boolean isCameraSupported(){
+        if(possibilitiesSettings.containsKey("camera")) {
+            try {
+                return possibilitiesSettings.get("camera") == 1;
+            } catch (NullPointerException e){
+                return false;
+            }
+        } else return false;
+    }
+
+    public boolean isMoveSupported(){
+        if(possibilitiesSettings.containsKey("move")) {
+            try {
+                return possibilitiesSettings.get("move") == 1;
+            } catch (NullPointerException e){
+                return false;
+            }
+        } else return false;
+    }
+
+    public boolean isNeedNewCommandButton(){
+        return !newProtoCommands.isEmpty();
+    }
+
     public Byte get(String key) {
         return moveCodes.get(key);
+    }
+
+    public HashMap<String, Byte> getNewDynamicCommands() {
+        return newProtoCommands;
     }
 
     XmlPullParser prepareXpp(String name) throws IOException, XmlPullParserException {
@@ -91,39 +129,21 @@ public class ProtocolRepo extends HashMap<String, Byte> {
                         break;
                     // содержимое тэга
                     case XmlPullParser.TEXT:
-                        if (labels.contains(curName)) {
-                            Log.d(LOG_TAG, xpp.getText());
-                            String codeEl = xpp.getText();
-                            if (codeEl.charAt(1) == 'x')
-                                codeEl = codeEl.substring(2);
-                            Byte xppCode = (byte) ((Character.digit(codeEl.charAt(0), 16) << 4)
-                                    + Character.digit(codeEl.charAt(1), 16));
-                            Log.d(LOG_TAG, "CODE " + curName + " " + xppCode);
-                            /*byte intXpp = 0;
-                            for (int i = 1; i >= 0; i--) {
-                                char d = codeEl.charAt(i);
-                                switch (d) {
-                                    case '1': intXpp += 1*16^i; break;
-                                    case '2': intXpp += 2*16^i; break;
-                                    case '3': intXpp += 3*16^i; break;
-                                    case '4': intXpp += 4; break;
-                                    case '5': intXpp += 5; break;
-                                    case '6': intXpp += 6; break;
-                                    case '7': intXpp += 7; break;
-                                    case '8': intXpp += 8; break;
-                                    case '9': intXpp += 9; break;
-                                    case 'A': intXpp += 10; break;
-                                    case 'B': intXpp += 11; break;
-                                    case 'C': intXpp += 12; break;
-                                    case 'D': intXpp += 13; break;
-                                    case 'E': intXpp += 14; break;
-                                    case 'F': intXpp += 15; break;
-                                }
-                            }*/
-                            //Byte xppCode = intXpp.byteValue();
-                                    /*(byte) ((Character.digit(codeEl.charAt(0), 16) << 4)
-                                    + Character.digit(codeEl.charAt(1), 16));*/
+                        Log.d(LOG_TAG, xpp.getText());
+                        String codeEl = xpp.getText();
+                        if (codeEl.length() >=2 && codeEl.charAt(1) == 'x')
+                            codeEl = codeEl.substring(2);
+                        Byte xppCode = (byte) Integer.parseInt(codeEl, 16);
+                        Log.d(LOG_TAG, "CODE " + curName + " " + xppCode);
+                        if (mainLabels.contains(curName)) {
+                            //основной список команд и кодов
                             moveCodes.put(curName, xppCode);
+                        } else if(possibilitiesSettings.containsKey(curName)){
+                            //список возможностей протокола
+                            possibilitiesSettings.put(curName, xppCode);
+                        } else {
+                            //список неизвестных (новых) программе команд
+                            newProtoCommands.put(curName, xppCode);
                         }
                         break;
                     default:
@@ -158,7 +178,7 @@ public class ProtocolRepo extends HashMap<String, Byte> {
                         if (curName.equals("length")) {
                             int len = Integer.parseInt(xpp.getText());
                         } else {
-                            if (labels.contains(curName)) {
+                            if (mainLabels.contains(curName)) {
                                 String codeEl = xpp.getText();
                                 if (codeEl.charAt(1) == 'x')
                                     codeEl = codeEl.substring(2);
